Backport new features to 1.20